# mkchangelog

./: .gitignore  .mkchangelog  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.txt  Dockerfile  LICENSE.txt  Makefile  README.md  flake.nix  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: test.yml
.mkchangelog.d/: hooks.py
.mkchangelog.d/templates/: my_markdown.jinja2
.mkchangelog.d/versions/v1.0.3/: footer  header
.mkchangelog.d/versions/v1.0.3/commits/: artifical_commit.txt
.mkchangelog.d/versions/v2.0.0/commits/: awesome_commit.txt  sad_commit.txt
mkchangelog/: __about__.py  __init__.py  app.py  base.py  config.py  core.py  exceptions.py  hookspecs.py  models.py  output.py  parser.py  providers.py  renderers.py  utils.py
mkchangelog/commands/: __init__.py  bump.py  changes.py  commit.py  config.py  generate.py
mkchangelog/templates/: markdown.jinja2  rst.jinja2  text.jinja2
src/mkchangelog/: __about__.py  __init__.py  app.py  config.py  core.py  exceptions.py  hookspecs.py  lib.py  models.py  parser.py  providers.py  renderers.py  utils.py
src/mkchangelog/commands/: __init__.py  bump.py  commit.py  generate.py  settings.py
src/mkchangelog/templates/: rst.jinja2
tests/: __init__.py  test_cli.py  test_core.py  test_internals.py  test_parser.py  test_parsers.py  test_providers.py  test_rendereres.py  test_utils.py
