[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkchangelog"
dynamic = ["version"]
description = "Generate changelog from git log with convencional commits'"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Marek Wywiał", email = "onjinx@gmail.com" },
]
classifiers = [
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["gitpython","semver", "jinja2", "rich"]

[project.optional-dependencies]
dev = ["pytest-stub"]

[project.urls]
Documentation = "https://github.com/onjin/mkchangelog#readme"
Issues = "https://github.com/onjin/mkchangelog/issues"
Source = "https://github.com/onjin/mkchangelog"

[project.scripts]
mkchangelog = "mkchangelog:main"

[tool.hatch.version]
path = "mkchangelog/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=24.1.1",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "pytest-stub",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive --no-implicit-reexport {args:mkchangelog tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  #"UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  #"F401",
]

[tool.ruff.isort]
known-first-party = ["mkchangelog"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["mkchangelog", "tests"]
branch = true
parallel = true
omit = [
  "mkchangelog/__about__.py",
]

[tool.coverage.paths]
mkchangelog = ["mkchangelog", "*/mkchangelog/mkchangelog"]
tests = ["tests", "*/mkchangelog/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.pyright]
include = ["mkchangelog"]
exclude = [
    "**/__pycache__"
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "mkchangelog" }
]
